k8s/gateway/common-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: common-gateway
  namespace: common
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: common-vs
  namespace: common
spec:
  hosts:
  - "*"
  gateways:
  - common-gateway
  http:
  - match:
    - uri:
        prefix: /api/common/
    route:
    - destination:
        host: common-api-svc
        port:
          number: 8080
